fix: fixed align in profile info

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -14,5 +14,6 @@
     line-height: calc(14 / 17);
     max-width: 282px;
     width: 100%;
+    text-align: center;
   }
 }
