--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 660px) {
   .profile__edit-button {
-    margin: 23px 0 0 15px;
+    margin: 23px 0 0;
     background-position: center;
     width: 18px;
     height: 18px;
