--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -12,7 +12,7 @@
 @media screen and (max-width: 660px) {
   .profile__name {
     max-width: 189px;
-    margin: 22px 0 0;
+    margin: 22px 10px 0 20px;
     font-size: 27px;
     line-height: calc(27 / 32.5);
   }
